--- a/SlideMenuControllerSwift/Base.lproj/Main.storyboard
+++ b/SlideMenuControllerSwift/Base.lproj/Main.storyboard
@@ -119,7 +119,7 @@
                                                 <rect key="frame" x="170" y="60" width="380" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                                <textInputTraits key="textInputTraits" keyboardType="numberPad" enablesReturnKeyAutomatically="YES"/>
+                                                <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                                                 <connections>
                                                     <action selector="depositTextFieldChanged:" destination="BYZ-38-t0r" eventType="editingChanged" id="xNS-Pf-tA5"/>
                                                 </connections>
