--- a/SlideMenuControllerSwift/Base.lproj/Main.storyboard
+++ b/SlideMenuControllerSwift/Base.lproj/Main.storyboard
@@ -2329,7 +2329,7 @@
                                                 <rect key="frame" x="100" y="174" width="440" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits"/>
+                                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                             </textField>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="원" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ogF-Sy-Q2m">
                                                 <rect key="frame" x="565" y="176" width="15" height="21"/>
